--- a/app/src/main/res/layout/dialog_item_remove.xml
+++ b/app/src/main/res/layout/dialog_item_remove.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
+        android:typeface="sans"
+        android:textColor="@color/colorAccent"
         android:textAlignment="center"
         android:text="@string/item_remove" />
 
