--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#02D69F</color>
 
     <color name="white">#FFFFFF</color>
+
+    <color name="gray">#CCCCCC</color>
+    <color name="gray_slight_dark">#AAAAAA</color>
+    <color name="gray_dark">#333333</color>
 </resources>
