--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,8 @@
         <item name="colorControlActivated">@color/white</item>
     </style>
 
+    <style name="RadioButtonPriority" parent="RadioButton">
+        <item name="android:background">@color/colorAccent</item>
+    </style>
+
 </resources>
