--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -223,7 +223,7 @@
                 <RadioButton
                     android:id="@+id/rbPriorityLow"
                     style="@style/RadioButton"
-                    android:layout_width="90dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="false"
                     android:checked="true"
@@ -233,7 +233,7 @@
                 <RadioButton
                     android:id="@+id/rbPriorityNormal"
                     style="@style/RadioButton"
-                    android:layout_width="90dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="false"
                     android:text="@string/lbl_priority_normal"
@@ -242,7 +242,7 @@
                 <RadioButton
                     android:id="@+id/rbPriorityImportant"
                     style="@style/RadioButton"
-                    android:layout_width="90dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="false"
                     android:text="@string/lbl_priority_important"
@@ -251,7 +251,7 @@
                 <RadioButton
                     android:id="@+id/rbPriorityCritical"
                     style="@style/RadioButton"
-                    android:layout_width="90dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="false"
                     android:text="@string/lbl_priority_critical"
